[package]
name = "tuchalib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = "0.6.0"
grammers-session = "0.5.2"
grammers-tl-types = { version = "0.6.0", features = ["tl-mtproto"] }
locate-locale = "0.2.0"
os_info = "3.8.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
