[package]
name = "tuchalib"
version = "0.2.0"
edition = "2021"
authors = ["Vladimir Senchuk"]
description = """
A high level client to interact with Telegram`s API and making it a cloud storage.
"""
repository = "https://github.com/ctyxer/tuchalib"
keywords = ["telegram", "cloud"]
license = "MIT"

[dependencies]
futures = "0.3.30"
grammers-client = "0.6.0"
grammers-mtsender = "0.5.1"
grammers-session = "0.5.2"
grammers-tl-types = { version = "0.6.0", features = ["tl-mtproto"] }
locate-locale = "0.2.0"
os_info = "3.8.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
