[package]
name = "tuchalib"
version = "0.2.1"
edition = "2021"
authors = ["Vladimir Senchuk"]
description = """
A high level client to interact with Telegram`s API and making it a cloud storage.
"""
repository = "https://github.com/ctyxer/tuchalib"
keywords = ["telegram", "cloud"]
license = "MIT"

[dependencies]
futures = "0.3.30"
grammers-client = { version = "0.7.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
